# ComfyUI-EasyUseAnima

./: .comfyignore  .gitignore  MAINTAINING.md  README.en.md  README.ko.md  README.md  RELEASE.md  __init__.py  animadex_dataset.py  api.py  autocomplete_dataset.py  nodes.py  pyproject.toml  settings.py  storage.py  wildcard_engine.py
anima_prompt/: README.md  __init__.py  correction.py  knowledge.py
docs/: autocomplete-csv.en.md  autocomplete-csv.ko.md  wildcards.en.md  wildcards.ko.md
docs/Anima AiO/: ANIMA_Easy_Use_workflow_v1_KO.md  Anima_AiO_v5_1_EN.html  Anima_AiO_v6.0_EN.md  Anima_AiO_v6.0_KO.md  Civitai_Release_Notes_v6.0.md  README.md  Workflow_Management.md
docs/development/: 0.1.7.md  0.1.8.md  0.1.9.md  0.2.0.md  0.2.1.md  0.2.2.md  README.md  current-policies.md  custom-node-integrations.md  language-management.md
docs/example_workflows/: ANIMA_Easy_Use_workflow_v1_release_ko.json  Anima_AiO_v6.0_release_en.json  Anima_AiO_v6.0_release_ja.json  Anima_AiO_v6.0_release_ko.json  Anima_AiO_v6.0_release_zh.json  README.md  (+5 more)
example_workflows/: Anima_AiO_v6.0_release_en.json  Anima_AiO_v6.0_release_ja.json  Anima_AiO_v6.0_release_ko.json  Anima_AiO_v6.0_release_zh.json  EasyUse_Anima_feature_test_release_en.json  EasyUse_Anima_feature_test_release_ko.json
tests/: test_aio_nodes.py  test_frontend_lora_preset.py  test_image_scale.py  test_locales.py  test_lora_preset.py  test_lora_preview.py  test_lora_profiles.py  test_naia_settings.py  test_prompt_corrector.py  test_prompt_studio_regional.py  test_storage.py  test_wildcards.py  test_workflows.py
(+48 files in other folders)
