[project]
name = "comfyui-easyuse-anima"
description = "Prompt editing, ANIMA prompt correction, NAIA prompt integration, and LoRA preset tools for ComfyUI."
version = "0.1.6"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/n0va39/ComfyUI-EasyUseAnima"
"Bug Tracker" = "https://github.com/n0va39/ComfyUI-EasyUseAnima/issues"

[tool.comfy]
PublisherId = "n0va39"
DisplayName = "ComfyUI EasyUse Anima"
